# SfmlGame

./: CMakeLists.txt
src/: main.cpp
src/Engine/: Actor.cpp  Actor.h  Character.h  EngineStatics.h
